menu toggling idea. needs to be fixed when scrolling and not cut off

--- a/visualization/final_viz/style.css
+++ b/visualization/final_viz/style.css
@@ -5,7 +5,11 @@ body {
   background: #202020;
   color: #ffffff;
   font-family: 'Montserrat', sans-serif;
-  padding-top: 220px;
+}
+
+h4 {
+  padding-bottom: 25px;
+  padding-top: 25px;
 }
 
 html {
@@ -174,3 +178,82 @@ td + td {
 td.hoverTooltip, td.hoverTooltip + td.hoverTooltip + td.hoverTooltip {
   text-align:left;
 }
+
+.message {
+  background:#181818;
+  color:#FFF;
+  position: absolute;
+  opacity: .7;
+  top: -200px;
+  left: 0;
+  width: 100%;
+  height: 200px;
+  padding: 20px;
+  transition: top 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
+  overflow: hidden;
+  box-sizing: border-box;
+
+}
+
+.message h1 {
+  color:#FFF;
+}
+
+#toggle {
+  position:absolute;
+  appearance:none;
+  cursor:pointer;
+  left:-100%;
+  top:-100%;
+}
+
+#toggle + label {
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  cursor:pointer;
+  padding:10px;
+  background: #26ae90;
+  width: 100px;
+  border-radius: 3px;
+  padding: 8px 10px;
+  color: #FFF;
+  line-height:20px;
+  font-size:12px;
+  text-align:center;
+  -webkit-font-smoothing: antialiased;
+  cursor: pointer;
+  margin:20px 50px;
+  transition:all 500ms ease;
+}
+#toggle + label:after {
+  content:"Open"
+}
+
+.container {
+  transition: margin 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
+  padding:5em 3em;
+}
+
+#toggle:checked ~ .message {
+  top: 0;
+  position: fixed;
+}
+
+#toggle:checked ~ .container {
+  margin-top: 200px;
+}
+
+#toggle:checked + label {
+  background:#dd6149;
+}
+
+#toggle:checked + label:after {
+  content:"Close"
+}
+
+.fixed {
+  position:fixed;
+  top:0;
+}
+
